	* The buddy's name was not centered vertically in the buddy-list if they
	  did not have a status-message or mood set.

	XMPP:
	* Strip element prefixes from XHTML-IM messages as they're presented
	  to the core (and UIs) as incoming messages (Thijs Alkemade).
	  (#14529)
	* Support file transfers up to ~9 EiB.

	Plugins:
	* The Voice/Video Settings plugin supports using the sndio GStreamer
	 backends. (Brad Smith) (#14414)

version 2.10.2 (02/22/2012):
	General:
	* Fix compilation when using binutils 2.22 and new GDK pixbuf. (#14799)
	* Fix compilation of the MXit protocol plugin with GLib 2.31. (#14773)

	Pidgin:
	* Add support for the GNOME3 Network dialog. (#13882)
	* Fix rare crash. (#14392)
	* Add support for the GNOME3 Default Application dialog for configuring
	  the Browser.

	libpurple:
	* Support new connection states and signals for NetworkManager 0.9+.
	  (Dan Williams) (#13859)

	AIM and ICQ:
	* Fix a possible crash when receiving an unexpected message
	  from the server. (Thijs Alkemade) (#14983)
	* Allow signing on with usernames containing periods and
	  underscores. (#13500)
	* Allow adding buddies containing periods and underscores. (#13500)
	* Don't try to format ICQ usernames entered as email addresses.
	  Gets rid of an "Unable to format username" error at login. (#13883)

	MSN:
	* Fix possible crashes caused by not validating incoming messages as
	  UTF-8. (Thijs Alkemade) (#14884)
	* Support new protocol version MSNP18. (#14753)
	* Fix messages to offline contacts. (#14302)

	Windows-Specific Changes:
	* Fix the installer downloading of spell-checking dictionaries (#14612)
	* Fix compilation of the Bonjour protocol plugin. (#14802)

	Plugins:
	* The autoaccept plugin will no longer reset the preference for unknown
	  buddies to "Auto Reject" in certain cases. (#14964)

version 2.10.1 (12/06/2011):
	Finch:
	* Fix compilation on OpenBSD.

	AIM and ICQ:
	* Fix remotely-triggerable crashes by validating strings in a few